add statistics methodes